# evsrestapi-operations

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  pyproject.toml
config/: AGENTS.md  ignore-source.txt  setenv-jena.sh_orig  setenv-stardog.sh_orig  setenv.sh_orig
config/metadata/: AGENTS.md  README.md  canmed.html  canmed.json  cdisc-form.json  chebi-samples.txt  chebi.html  chebi.json  ctcae5.html  ctcae5.json  ctcae6.html  ctcae6.json  duo.html  duo.json  go-samples.txt  go.html  go.json  hgnc.json  hl7.json  hl7v3.0.html  hl7v3.0.json  icd10.html  icd10.json  icd10cm.html  icd10cm.json  icd9cm.html  icd9cm.json  lnc.html  lnc.json  ma.html  ma.json  mapping-go-nci.html  mapping-icd10-mdr.html  mapping-ma-nci.html  mapping-nci-chebi.html  mapping-nci-gdc.html  mapping-nci-hgnc.html  mapping-nci-icd10.html  mapping-nci-icd10cm.html  mapping-nci-icd9cm.html  (+39 more)
data/mappings/: AGENTS.md  GO_to_NCIt_Mapping_February2020.txt  ICD-10_to_MedDRA_Mapping_July2023.txt  ICD10_to_MedDRA_Mapping_July2023.txt  (+60 more)
docs/: owl_sampling_tutorial.md
legacy/: AGENTS.md  BaselineFTP.sh  MasterCTRP.orig.sh  MasterCTRP.sh  MasterCTRP_Disjoint.sh  MasterEVS.sh  MasterNCIt_CTRP.sh  ReadMe_CTRP.txt  TestFTP.sh  cleanup.sh  copy_dev_qa.sh  extractBranches_md5.sh  extractBranches_md5_Testing_noFTP.sh  grepTest.sh  lvgMasterCTRP.sh  runAsserted.sh  runInferred.sh  runLVG.sh
lib/: AGENTS.md
src/: AGENTS.md  analyze_medrt_xpath.py  pyproject.toml
test/: AGENTS.md  canmed_test.py  hgnc_test.py  owl_sampling_test.md  owl_sampling_test.py  stardog_qa_test.py  umls_sem_net_test.py
(+65 files in other folders)
