[tool.poetry]
name = "terminology_converter"
version = "0.1.0"
description = "Scripts to convert terminology files to simple format and to OWL"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
